--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
 .card {
   border-radius: 20px;
   overflow: hidden;
+  transition: all 0.2s linear;
 }
 .card-image {
   height: 250px;
@@ -78,6 +79,10 @@ body {
   line-height: 1.5;
   margin-bottom: 25px;
   cursor: pointer;
+}
+
+.card:hover {
+  box-shadow: 1px 1px 12px 1px #2980b9;
 }
 
 .author {
@@ -137,6 +142,58 @@ body {
 .view-circle {
   color: #2980b9;
   margin-right: 5px;
+}
+
+@media screen and (max-width: 1279px) {
+  .card-image {
+    height: 200px;
+  }
+  .card-heading {
+    line-height: 1.2;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  .card-info {
+    padding: 20px 15px;
+  }
+
+  .view {
+    padding-top: 20px;
+  }
+  .view-live {
+    margin-right: 5px;
+  }
+  .view-circle {
+    margin-right: 2px;
+  }
+
+  .author {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px 30px;
+  }
+
+  .card-image {
+    width: 100%;
+  }
+
+  .view-live {
+    margin-right: 15px;
+  }
+  .view-circle {
+    margin-right: 5px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .cards {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
